# recipes

./: .clang-format  .gitignore  .gitmodules  README  git.sh
cpp/brpc_register/: README.md  echo_service.pb.cc  echo_service.pb.h  echo_service.proto  modify_brpc.md  registry_server.cpp  registry_service.pb.cc  registry_service.pb.h  registry_service.proto  service_consumer.cpp  service_consumer1.cpp  service_consumer2.cpp  service_provider.cpp
cpp/cpp_20_study/examples/: test.ipynb
cpp/cpp_20_study/examples/lesson01/: GuessNumber.cpp
cpp/cpp_20_study/examples/lesson02/: fig02_02.cpp  fig02_03.cpp  fig02_04.cpp  fig02_05.cpp
cpp/cpp_20_study/examples/lesson03/: fig03_05.cpp
cpp/cpp_20_study/examples/lesson04/: fig04_03.cpp  fig04_03fmt.cpp  fig04_06_fallthrough.cpp  fig04_07.cpp  fig04_07fmt.cpp  fig04_17.cpp  fig04_17fmt.cpp
cpp/cpp_20_study/examples/lesson05/: fig05_03.cpp
cpp/cpp_study/: CMakeLists.txt  README-CN.md
cpp/cpp_study/section0/: CMakeLists.txt  macro.cpp  sort.cpp
cpp/cpp_study/section1/: CMakeLists.txt  codestyle.cpp  compile_attr.cpp  final.cpp  oop.cpp  preprocess.cpp
cpp/cpp_study/section2/: auto.cpp  const.cpp  smart_ptr.cpp
cpp/cpp_study/section4/: CMakeLists-4.txt  CMakeLists.txt  curl.cpp  json.cpp  pybind.cpp  pydemo_test.py  shared.lua  zmq.cpp
cpp/cpp_study/section5/: CMakeLists-5.txt  CMakeLists.txt  srv.cpp
cpp/cpu_affinity/: CMakeLists.txt  cpu_affinity.md  look_thread_affinity.sh  process_affinity.cc  process_thread_balancer_select.cc  process_thread_random_select.cc  process_thread_round_robin.cc  thread_affinity.cc
datastruct/: CMakeLists.txt  LinearProbingHashSet.h  StdUnorderSet.h  array.cc  base_bloom_filter.h  binary_search.h  bloom_filter_main.cpp  bst.cpp  bubble_sort.h  bucket_sort.h  counting_sort.h  cycle_array.cc  floyd.cpp  hash_set_main.cpp  heap_sort.h  hierholzer.cpp  huffman_coding.cpp  insert_sort.h  list_deque.cpp  list_hash.cpp  list_hash_map_set_main.cpp  list_hashmap.h  list_hashset.h  list_hashset_direct.h  list_queue.cpp  list_stack.cpp  max_segment_tree.cpp  merge_sort.h  myhashset.h  optimized_bloom_filter.h  priority_queue.cpp  quick_sort.h  radix_sort.h  recursive_bucket_sort.h  segment_tree.cpp  select_sort.h  shell_sort.h  simple_priority_queue.cpp  sort_main.cpp  vector_stack.cpp
design_pattern/: observer.cpp
designpattern/: CMakeLists.txt
leetcode/: 2537.cc  30.cpp  README.md
leetcode/algorithms/c/LargestNumberAfterMutatingSubstring/: largestNumberAfterMutatingSubstring.c
leetcode/algorithms/c/twoSum/: twoSum.c
leetcode/algorithms/cpp/DesignLinkedList/: DesignLinkedList.cpp
leetcode/algorithms/cpp/MiddleOfTheLinkedList/: middleOfTheLinkedList.cpp
leetcode/algorithms/cpp/addTwoNumbers/: addTwoNumbers.cpp
leetcode/algorithms/cpp/addTwoNumbers2/: addTwoNumbers2.cpp
leetcode/algorithms/cpp/binaryTreePreorderTraversal/: binaryTreePreorderTraversal.cpp
leetcode/algorithms/cpp/coinChange/: coinChange.cpp
leetcode/algorithms/cpp/combinationSum/: combinationSum.cpp
leetcode/algorithms/cpp/combinations/: combinations.cpp
leetcode/algorithms/cpp/containsDuplicate/: ContainsDuplicate.cpp
leetcode/algorithms/cpp/diameterOfBinaryTree/: diameterOfBinaryTree.cpp
leetcode/algorithms/cpp/findAllAnagramsInAString/: Find-All-Anagrams-in-a-String.cpp
leetcode/algorithms/cpp/findKPairsWithSmallestSums/: findKPairsWithSmallestSums.cpp
leetcode/algorithms/cpp/intersectionOfTwoLinkedLists/: intersectionOfTwoLinkedLists.cpp
leetcode/algorithms/cpp/jumpGame/: jumpGame.II.cpp  jumpGame.cpp
leetcode/algorithms/cpp/kthSmallestElementInASortedMatrix/: kthSmallestElementInASortedMatrix.cpp
leetcode/algorithms/cpp/largestNumberAfterMutatingSubstring/: LargestNumberAfterMutatingSubstring.cpp
leetcode/algorithms/cpp/linkedListCycle/: linkedListCycle.II.cpp
leetcode/algorithms/cpp/longestPalindromicSubstring/: longestPalindromicSubstring.cpp
leetcode/algorithms/cpp/longestSubstringWithoutRepeatingCharacters/: longestSubstringWithoutRepeatingCharacters.cpp
leetcode/algorithms/cpp/maximumDepthOfBinaryTree/: maximumDepthOfBinaryTree.cpp
leetcode/algorithms/cpp/mergeKSortedLists/: mergeKSortedLists.cpp
leetcode/algorithms/cpp/mergeTwoSortedList/: mergeTwoSortedList.cpp
leetcode/algorithms/cpp/minimumWindowSubstring/: minimumWindowSubstring.cpp
leetcode/algorithms/cpp/moveZeroes/: moveZeroes.cpp
leetcode/algorithms/cpp/openTheLock/: openTheLock.cpp
leetcode/algorithms/cpp/partitionList/: partitionList.cpp
leetcode/algorithms/cpp/permutationInString/: permutationInString.cpp
leetcode/algorithms/cpp/permutations/: permutations.II.cpp  permutations.cpp
leetcode/algorithms/cpp/removeDuplicatesFromSortedArray/: removeDuplicatesFromSortedArray.cpp
leetcode/algorithms/cpp/removeDuplicatesFromSortedList/: removeDuplicatesFromSortedList.II.cpp  removeDuplicatesFromSortedList.cpp
leetcode/algorithms/cpp/removeNthNodeFromEndOfList/: removeNthNodeFromEndOfList.cpp
leetcode/algorithms/cpp/reverseLinkedList/: reverseLinkedList.cpp
leetcode/algorithms/cpp/reverseString/: ReverseString.cpp
leetcode/algorithms/cpp/singleNumber/: singleNumber.cpp
leetcode/algorithms/cpp/slidingPuzzle/: slidingPuzzle.cpp
leetcode/algorithms/cpp/sortColors/: sortColors.cpp
leetcode/algorithms/cpp/subsets/: subsets.II.cpp  subsets.cpp
leetcode/algorithms/cpp/timeNeededToBuyTickets/: timeNeededToBuyTickets.cpp
leetcode/algorithms/cpp/twoSum/: twoSum.II.cpp  twoSum.cpp
leetcode/algorithms/cpp/validParentheses/: validParentheses.cpp
leetcode/algorithms/golang/LargestNumberAfterMutatingSubstring/: largestNumberAfterMutatingSubstring.go
leetcode/algorithms/golang/twoSum/: twoSum.go
leetcode/algorithms/python/LargestNumberAfterMutatingSubstring/: largestNumberAfterMutatingSubstring.py
leetcode/datastruct/: CMakeLists.txt  array.cpp  array_hash.cpp  circle_array_deque.cpp  circle_array_queue.cpp  cycle_array.cpp  double_list.cpp  list.cpp
python/boto3/s3/: put_object.py
thread/: Mutex.h
thread/test/: CopyOnWrite_test.cc  Counter.cc  Factory.cc
(+3 files in other folders)
